# code-music

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  claude.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
albums/: _album.py  ambient_cinematic.py  ambient_horizons.py  anthology.py  classical_orchestral.py  classical_portraits.py  constellations.py  cosmic_electro.py  country_americana.py  drum_and_bass.py  dubstep.py  edm_festival.py  edm_progressive.py  electric_dreams.py  elements.py  fibonacci.py  folk_acoustic.py  funk_disco.py  hiphop_lofi.py  indie_alternative.py  jazz_neosoul.py  jazz_sessions.py  latin.py  metal.py  parody.py  periodic_table.py  pop.py  rasputin_remixes.py  render.py  rnb_soul.py  rock_prog.py  rush_abc.py  techno.py  the_planets.py  time_periods.py  videogame_anime.py  world_experimental.py  world_fusion.py
code_music/: __init__.py  __main__.py  auto_mix.py  automation.py  cli.py  composition.py  effects.py  engine.py  export.py  flow.py  integrations.py  mastering.py  midi.py  notation.py  pattern.py  playback.py  plugins.py  repl.py  rhythm_game.py  serialization.py  sound_design.py  symphony.py  synth.py  theory.py  transform.py  vocal.py  voice.py
docs/: api.html  chords.html  distribution.md  for_creators.md  for_developers.md  for_listeners.md  for_theory_heads.md  index.html  playground.html  scales.html  techniques.html
examples/: 01_hello_world.py  02_chords_and_scales.py  03_effects_chain.py  04_arrangement.py  05_track_transforms.py  06_midi_roundtrip.py  07_json_save_load.py  08_live_coding.py  09_generative.py  10_analysis.py  11_sound_design.py  12_fm_and_wavetables.py  13_granular_and_physical.py  14_patterns.py  15_automation.py  15_spectral_and_timbre.py  16_mastering.py  16_spatial.py  17_automation.py  17_plugins.py  18_structure.py  18_theory.py  19_json_export.py  19_visualization.py  20_melody_and_structure.py  21_analysis.py  hello_world.py  prog_rock.py
scales/: _circle_of_fifths.py  arabic.py  augmented.py  bebop_dominant.py  bebop_major.py  bebop_minor.py  blues_major.py  blues_minor.py  chromatic.py  diminished.py  diminished_hw.py  (+21 more)
(+801 files in other folders)
