[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-music"
version = "0.2.0"
description = "Code-generated music: write blocks of code, export Spotify-ready audio"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydub>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
code-music = "code_music.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
