[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-music"
version = "3.0.0"
description = "Code-generated music: write blocks of code, export Spotify-ready audio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Keith Adler", email = "kadler@cloudflare.com" }]
keywords = ["music", "audio", "synthesis", "generative", "midi", "wav", "dsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Artistic Software",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydub>=0.25",
]

[project.optional-dependencies]
play = ["sounddevice>=0.4"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Talador12/code-music"
Repository = "https://github.com/Talador12/code-music"
Issues = "https://github.com/Talador12/code-music/issues"

[project.scripts]
code-music = "code_music.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"songs/*.py" = ["E501"]
"samples/**/*.py" = ["E501"]
"examples/*.py" = ["E501"]
"albums/*.py" = ["E501"]
